Update agent.instrumentation.java.sh